# cryptopals-solns-rust

./: Cargo.toml
src/: lib.rs  set1.rs  set2.rs  set3.rs  set4.rs  set5.rs
src/kev_crypto/: mod.rs
src/kev_sha1/: mod.rs
src/kev_sha1/compress/: soft.rs
src/kev_sha1/kev_sha1/compress/: soft.rs
