[package]
name = "cryptopals-rust"
version = "0.1.0"
authors = ["Kevin Teh <kkwteh@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
hex-literal = "0.3.1"
lazy_static = "1.4.0"
openssl = "0.10.32"
aes = "0.6.0"
block-modes = "0.7.0"
rand = "0.8.1"
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
bitvec = "0.20.1"
sha-1 = "0.9.2"