[package]
name = "cryptopals-rust"
version = "0.1.0"
authors = ["Kevin Teh <kkwteh@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
hex-literal = "0.3.1"
lazy_static = "1.4.0"
openssl = "0.10.32"
aes = "0.6.0"
block-modes = "0.7.0"
rand = "0.8.1"
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
bitvec = "0.20.1"
digest = "0.9"
block-buffer = "0.9"
opaque-debug = "0.3"
cfg-if = "1.0"
sha1-asm = { version = "0.4", optional = true }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpuid-bool = "0.1"

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
libc = { version = "0.2.82", optional = true }

[features]
default = ["std"]
std = ["digest/std"]
asm = ["sha1-asm", "libc"]
# Force software implementation
force-soft = []

# DEPRECATED: use `asm` instead
asm-aarch64 = ["asm"]